Update HTML language and resource paths
Added 'lang="en"' to the <html> tag. Updated stylesheet and script paths to be relative, improving portability and compatibility.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,7 +9,7 @@
         
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <link rel="stylesheet" href="/HTML/fartButton/styles.css">
+        <link rel="stylesheet" href="./styles.css">
     </head>
     <body>
 
@@ -21,6 +21,6 @@
 
         <button id="resetButton" onclick="window.location.reload();" class="verticalCenter horizontalCenter comic-relief-regular">Reset</button>
 
-        <script src="/HTML/fartButton/scripts.js" async defer></script>
+        <script src="./scripts.js" async defer></script>
     </body>
 </html>
